# p-ray-voice-stack-public

./: .env.example  .gitignore  README.en.md  README.md  requirements.txt
commercial/: README.md  intake-form.md  services.md
docs/: license-and-commercial-boundary.md  quickstart.md  v2-v3-comparison.md  v3-runtime-boundary.md
examples/hardware-v2/: README.md
examples/hardware-v3/: README.md
examples/local-v2/: README.md
examples/local-v2/web/: app.js  index.html
hardware/esp-vocat-v1.2/: README.md
hardware/esp-vocat-v1.2/firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
hardware/esp-vocat-v1.2/firmware/main/: CMakeLists.txt  audio_in.c  audio_in.h  audio_out.c  audio_out.h  cloud_client.c  cloud_client.h  config.h  idf_component.yml  main.c  trigger_input.c  trigger_input.h
server/: __init__.py  app.py  settings.py
server/api/: __init__.py  v2.py  v3.py
tests/: test_docs_structure.py  test_hardware_v2_tree.py  test_healthz.py  test_local_v2_quickstart.py  test_v3_routes.py
